--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,10 @@
           <img src="https://mpng.subpng.com/20180329/utq/kisspng-2017-mercedes-benz-sprinter-2015-mercedes-benz-spr-van-5abd6d955b08a5.6760484515223637973729.jpg" alt="">
           <br><a class="homebtn" href="/van">Vans</a>
         </div>
+        <div>
+          <img src="https://image.similarpng.com/very-thumbnail/2020/09/Large-black-truck-with-semitrailer-on-transparent-background-PNG.png" alt="">
+          <br><a class="homebtn" href="/truck">Trucks</a>
+        </div>
       </div>
     </div>
     <%- include("../views/partials/footer.ejs"); %>
